fixed up footer section alignment issues

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -131,141 +131,10 @@
     }
 }
 
-@media (max-width: 480px) {
-    .sectionSixDiv {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding-top: 10px;
-        padding-bottom: 20px;
-
-        h3 {
-            text-transform: uppercase;
-            font-family: 'Montserrat', sans-serif;
-            text-transform: uppercase;
-            font-size: 1.4rem;
-            line-height: 24px;
-            letter-spacing: 1.8px;
-            margin-bottom: 30px;
-            text-align: center;
-        }
-
-        p {
-            font-family: 'Open Sans', sans-serif;
-            font-size: 1rem;
-            line-height: 1rem;
-            letter-spacing: 0.3px;
-        }
-
-        li {
-            font-family: 'Open Sans', sans-serif;
-            font-size: 1rem;
-            line-height: 2rem;
-            letter-spacing: 0.3px;
-        }
-
-        i {
-            color: white;
-        }
-
-        .contactUs {
-            nav {
-                ul {
-                    display: flex;
-                    width: 50px;
-                    justify-content: space-between;
-                    margin-top: 20px;
-                }
-            }
-        }
-
-        .recentPosts {
-            h3 {
-                text-align: center;
-            }
-
-            ul {
-                list-style-type: square;
-
-                li {
-                    line-height: 2.4rem;
-                }
-            }
-        }
-
-        .twitterWidget {
-            text-align: right;
-            h3 {
-                text-align: right;
-            }
-
-            form {
-                padding: 0;
-                position: relative;
-
-                label {
-                    display: block;
-                    font-family: 'Open Sans', sans-serif;
-                    font-size: 1rem;
-                    line-height: 1rem;
-                    letter-spacing: 0.3px;
-                    margin-bottom: 25px;
-                }
-
-                input {
-                    margin: 0;
-                    padding: 8px;
-                    border: none;
-                    appearance: none;
-                    height: 30px;
-                    text-align: left;
-                    margin-right: 30px;
-                }
-
-                button {
-                    margin: 0;
-                    padding: 0;
-                    border: none;
-                    appearance: none;
-                    background-color: #C3DAB7;
-                    position: absolute;
-                    height: 30px;
-                    width: 30px;
-                    right: 0px;
-
-                    i {
-                        color: #333333;
-                    }
-                }
-            }
-        }
-    }
-
-    .creativeAgency {
-        background-color: #333333;
-        margin: 0;
-        height: 100px;
-        border-top: #F6F6F6 1px solid;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        h2 {
-            text-transform: uppercase;
-            font-family: 'Montserrat', sans-serif;
-            text-transform: uppercase;
-            font-size: 1rem;
-            line-height: 24px;
-            letter-spacing: 6px;
-            margin: 0;
-            color: white;
-            text-align: center;
-            font-weight: 400;
-            vertical-align: middle;
-        }
-    }
-}
 @media (max-width: 800px) {
+    .empty {
+        height: 100px;
+    }
     .sectionSixDiv {
         display: flex;
         flex-direction: column;
@@ -274,6 +143,9 @@
         padding-bottom: 20px;
 
         .contactUs {
+            h3 {
+                text-align: center;
+            }
             nav {
                 ul {
                     display: flex;
@@ -299,9 +171,9 @@
         }
 
         .twitterWidget {
-            text-align: right;
+            text-align: left;
             h3 {
-                text-align: right;
+                text-align: center;
             }
 
             form {
@@ -336,7 +208,7 @@
                     position: absolute;
                     height: 30px;
                     width: 30px;
-                    right: 0px;
+                    left: 132px;
 
                     i {
                         color: #333333;
