--- a/styles/style.css
+++ b/styles/style.css
@@ -1385,140 +1385,10 @@ header {
   vertical-align: middle;
 }
 
-@media (max-width: 480px) {
-  .sectionSixDiv {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    padding-top: 10px;
-    padding-bottom: 20px;
-  }
-  .sectionSixDiv h3 {
-    text-transform: uppercase;
-    font-family: "Montserrat", sans-serif;
-    text-transform: uppercase;
-    font-size: 1.4rem;
-    line-height: 24px;
-    letter-spacing: 1.8px;
-    margin-bottom: 30px;
-    text-align: center;
-  }
-  .sectionSixDiv p {
-    font-family: "Open Sans", sans-serif;
-    font-size: 1rem;
-    line-height: 1rem;
-    letter-spacing: 0.3px;
-  }
-  .sectionSixDiv li {
-    font-family: "Open Sans", sans-serif;
-    font-size: 1rem;
-    line-height: 2rem;
-    letter-spacing: 0.3px;
-  }
-  .sectionSixDiv i {
-    color: white;
-  }
-  .sectionSixDiv .contactUs nav ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 50px;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    margin-top: 20px;
-  }
-  .sectionSixDiv .recentPosts h3 {
-    text-align: center;
-  }
-  .sectionSixDiv .recentPosts ul {
-    list-style-type: square;
-  }
-  .sectionSixDiv .recentPosts ul li {
-    line-height: 2.4rem;
-  }
-  .sectionSixDiv .twitterWidget {
-    text-align: right;
-  }
-  .sectionSixDiv .twitterWidget h3 {
-    text-align: right;
-  }
-  .sectionSixDiv .twitterWidget form {
-    padding: 0;
-    position: relative;
-  }
-  .sectionSixDiv .twitterWidget form label {
-    display: block;
-    font-family: "Open Sans", sans-serif;
-    font-size: 1rem;
-    line-height: 1rem;
-    letter-spacing: 0.3px;
-    margin-bottom: 25px;
-  }
-  .sectionSixDiv .twitterWidget form input {
-    margin: 0;
-    padding: 8px;
-    border: none;
-    -webkit-appearance: none;
-       -moz-appearance: none;
-            appearance: none;
-    height: 30px;
-    text-align: left;
-    margin-right: 30px;
-  }
-  .sectionSixDiv .twitterWidget form button {
-    margin: 0;
-    padding: 0;
-    border: none;
-    -webkit-appearance: none;
-       -moz-appearance: none;
-            appearance: none;
-    background-color: #C3DAB7;
-    position: absolute;
-    height: 30px;
-    width: 30px;
-    right: 0px;
-  }
-  .sectionSixDiv .twitterWidget form button i {
-    color: #333333;
-  }
-  .creativeAgency {
-    background-color: #333333;
-    margin: 0;
-    height: 100px;
-    border-top: #F6F6F6 1px solid;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .creativeAgency h2 {
-    text-transform: uppercase;
-    font-family: "Montserrat", sans-serif;
-    text-transform: uppercase;
-    font-size: 1rem;
-    line-height: 24px;
-    letter-spacing: 6px;
-    margin: 0;
-    color: white;
-    text-align: center;
-    font-weight: 400;
-    vertical-align: middle;
-  }
-}
 @media (max-width: 800px) {
+  .empty {
+    height: 100px;
+  }
   .sectionSixDiv {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1532,6 +1402,9 @@ header {
             justify-content: center;
     padding-top: 10px;
     padding-bottom: 20px;
+  }
+  .sectionSixDiv .contactUs h3 {
+    text-align: center;
   }
   .sectionSixDiv .contactUs nav ul {
     display: -webkit-box;
@@ -1553,10 +1426,10 @@ header {
     line-height: 2.4rem;
   }
   .sectionSixDiv .twitterWidget {
-    text-align: right;
+    text-align: left;
   }
   .sectionSixDiv .twitterWidget h3 {
-    text-align: right;
+    text-align: center;
   }
   .sectionSixDiv .twitterWidget form {
     padding: 0;
@@ -1592,7 +1465,7 @@ header {
     position: absolute;
     height: 30px;
     width: 30px;
-    right: 0px;
+    left: 132px;
   }
   .sectionSixDiv .twitterWidget form button i {
     color: #333333;
